part_headers = files(
    'LATfield2_particle_description_template.hpp',
    'LATfield2_particle_rk4.hpp',
    'LATfield2_Particles.hpp',
    'LATfield2_particle_simple.hpp',
    'LATfield2_particlesIO.hpp',
    'move_function.hpp',
    'particles_tools.hpp',
    'projections.hpp',
    'updateVel_function.hpp' )
install_headers(part_headers,subdir: 'particles')
