sources = files(
    'LATfield2_parallel2d.cpp',
    'LATfield2_Field.cpp',
    'LATfield2_Lattice.cpp',
    'LATfield2_Site.cpp',
    'LATfield2_SettingsFile.cpp',
    'LATfield2_particle_simple.cpp',
    'int2string.cpp',
    'projections.cpp',
    'move_function.cpp',
    'updateVel_function.cpp',
    'particles_tools.cpp',
    'LATfield2_particle_rk4.cpp',
    'LATfield2.cpp')
